--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -422,6 +422,13 @@
                                     {% for skill in about.skills.all %}<span class="bg-gray-800 text-gray-300 px-4 py-2 rounded-full text-xs font-bold">{{ skill.name }}</span>
                                     {% empty %}<p>Skills coming soon...</p>{% endfor %}
                                 </div>
+<a href="{% url 'download_resume' %}" target="_blank"
+                           class="mt-8 inline-block px-6 py-3 bg-accent-color text-black text-sm font-bold rounded-full shadow-md hover-bg-accent-color transition-all duration-300 transform hover:scale-105">
+                            View & Save Resume
+                            <svg xmlns="http://www.w3.org/2000/svg" class="inline-block w-5 h-5 ml-1 -mt-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" />
+                            </svg>
+                        </a>
                             </div>
                         </div>
                     </section>
