--- a/portfolio/templates/emails/contact_user.html
+++ b/portfolio/templates/emails/contact_user.html
@@ -52,7 +52,7 @@
                         <td style="padding: 30px; text-align: center; border-top: 1px solid #282828;">
                             <p style="margin: 0; font-size: 12px; color: #535353;">
                                 &copy; {% now "Y" %} Akshat Singh. All rights reserved.<br>
-                                You received this email because you contacted me via my portfolio.
+                                This email was sent automatically. Replies are not monitored.
                             </p>
                         </td>
                     </tr>
