--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -563,7 +563,7 @@
 
                 {% if about.description %}
                 <div class="resume-section">
-                    <h2>Professional Summary</h2>
+                    <h2>About Me</h2>
                     <div class="resume-desc">{{ about.description }}</div>
                 </div>
                 {% endif %}
